--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1631,107 +1631,107 @@ stories:
   domain: http://www.hoosiertimes.com/
   link: https://www.hoosiertimes.com/news/national/trump-answers-question-about-home-alone/video_f258ff98-c166-5634-9160-70110335420d.html
 images:
-- name: bf-skinner-firetruck-bright-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-firetruck-bright-sun.jpg
-- name: copper-circuit-electric-tower-sun-behind.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-electric-tower-sun-behind.jpg
-- name: window-window-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-aqua.jpg
-- name: amusement-park-amusement-park-2-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-light-dali.jpg
-- name: christianity-christianity-under-construction-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-wols.jpg
-- name: copper-circuit-fire-truck-pulling-out-of-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fire-truck-pulling-out-of-station.jpg
-- name: border-fence-border-fence-on-hill-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-space-pizza.jpg
-- name: amusement-park-amusement-park-2-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-wav-pr.jpg
-- name: mistywoods-babyfoot-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-kand-two.jpg
-- name: aws-s3-stories-4882162452-fa3126b38d-b-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-aqua.jpg
-- name: powerlines-power-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-missle.jpg
-- name: bf-skinner-path-in-woods-green-lush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-path-in-woods-green-lush.jpg
-- name: stories-statue-face-open-mouth-blue-circuit-5.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-blue-circuit-5.png
-- name: dragon_close-up-leaflets-of-the-russian-revolution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-leaflets-of-the-russian-revolution.jpg
-- name: razorwire-DSC-0080-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-space-pizza.jpg
-- name: oldcabin-oldcabin-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-sand-paper.jpg
-- name: beach-clouds-lifeguard-beachclouds-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-wols.jpg
-- name: store-on-corner-oldcabin-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alberto-giacometti.jpg
-- name: aws-s3-stories-vancouver-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-diego-rivera1.jpg
-- name: old-house-oldhouse-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-really-hot.jpg
-- name: la-muse-japanese-garden-tree.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-japanese-garden-tree.jpg
-- name: oldhousecars-house-old-cars-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-yellow-paper.jpg
-- name: containership-containership-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
-- name: castle-wall-DSC-0067-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit.JPG
-- name: server-cloud-server-racks-clouds-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smooth-ride.jpg
-- name: store-on-corner-store-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purple-pond.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-bright-sand.jpg
-- name: gypsymosaic-gypsy-eyes-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-gan-vogh.jpg
-- name: statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
-- name: legal-statue-legalstatue-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-bright-sand.jpg
-- name: fence-fence-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dali-three.jpg
-- name: amusement-park-amusement-park-2-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-cinnamon-rolls.jpg
+- name: razorwire-DSC-0080-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-missle.jpg
+- name: copper-circuit-chess-in-the-park-with-pigeons.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-chess-in-the-park-with-pigeons.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-dali.jpg
+- name: subway-subway-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-really-hot.jpg
+- name: crow-crow-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gred-mash.jpg
+- name: stories-gears-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-gears-smoking-cigarette.jpg
+- name: rockingchair-rockingchair-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-smoking-cigarette.jpg
+- name: razorcliff-razorcliff-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-wols.jpg
+- name: birdhouse-birdhouse-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crafty-painting.jpg
+- name: oldhousecars-house-old-cars-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kand-two.jpg
+- name: berlinwall2-berlinwall-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-green-zuma.jpg
+- name: bordercrossing-bordercrossing-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-hot-spicy.jpg
+- name: dc-statue-dcstatue-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-constitution.jpg
+- name: paris-paris-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-atari-missle.jpg
+- name: christianity-christianity-under-construction-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-oily-mcoilface.jpg
 - name: bf-skinner-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-wwdc-2011---moscone---san-francisco_5809419816_o.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-feed-people.png
-- name: rain-princess-DSC_0036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0036.jpg
-- name: old-church-oldchurch-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-smooth-ride.jpg
-- name: paris-paris-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-alberto-giacometti.jpg
-- name: powerlines-power-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-aqua.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
-- name: adam-smith-adam-smith-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-pablo-blue.jpg
-- name: status-berlin-status-berlin-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-purp-paper.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-yellow-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-yellow-paper.JPG
-- name: old-church-oldchurch-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-purple-storm.jpg
-- name: bf-skinner-supreme-court-columns.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-supreme-court-columns.jpg
-- name: lincoln-memorial-lincolnmemorial-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-smooth-ride.jpg
-- name: oldcabin-store-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-marcel-duchamp.jpg
-- name: stories-castle-on-hill-edinburgh-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-blue-circuit.JPG
-- name: catacombs-catacombs-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-constitution.jpg
-- name: castle-wall-DSC-0067-dark-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-dali.JPG
-- name: nazi-invasion-crow-stailess-steal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-crow-stailess-steal.jpg
+- name: power-lines-power-lines-empty-space-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
+- name: sand-hand-sand-hand-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dali-two.jpg
+- name: oldcabin-store-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-pablo-blue.jpg
+- name: paris-paris-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-satan-red.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-crafty-painting.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crafty-painting.JPG
+- name: miamibeach-miamibeach-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-ww2-dresden.jpg
+- name: razorwire-DSC-0080-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-crafty-painting.jpg
+- name: trucksilo-trucksilo-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-marcel-duchamp.jpg
+- name: white-house-lawn-white-house-window-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-soul.jpg
+- name: old-barn-old-barn-1500-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-nazi-poster.jpg
+- name: yuma-bank-yuma-bak-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-5.jpg
+- name: ellis-island-ellisisland-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-aqua.jpg
+- name: nazi-invasion-IMG_7831.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7831.jpg
+- name: locked-up-steam-lock-up-steam-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-green-zuma.jpg
+- name: nyc-flag-nycflag-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-gred-mash.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-purp-paper.jpg
+- name: old-cabin-oldcabin-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-space-pizza.jpg
+- name: bordercrossing-bordercrossing-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-cinnamon-rolls.jpg
+- name: braceros-domingo-ulloa-steam-engine-iceland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-steam-engine-iceland.jpg
+- name: server-cloud-server-racks-door-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit-2.jpg
+- name: window-window-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colorful-blocks.jpg
+- name: old-barn-old-barn-1500-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-clean-view.jpg
+- name: art-museum-art-museum-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-pablo-blue.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purple-pond.jpg
+- name: oldbarn-oldbarn-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-pablo-blue.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-pablo-blue.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dali-three.jpg
+- name: stories-lincoln-consitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-lincoln-consitution.jpg
+- name: mosaic-face-mosaic-face-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purple-storm.jpg
+- name: old-barn-old-barn-1500-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-yellow-paper.jpg
+- name: mediterranean-mediterranean-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-matrix.jpg
+- name: braceros-domingo-ulloa-subway-underground_35904617894_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-subway-underground_35904617894_o.jpg
+- name: aws-s3-square-raven-fence-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-raven-fence-square.jpg
+- name: adam-smith-adam-smith-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kand-two.jpg
+- name: udnie-IMG_7319.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7319.jpg
 ---
 Causes Of Knee Pain And Possible Treatments.&nbsp;Grant Will Provide Home Rehab Dollars To Residents.&nbsp;Christmas Festivities Begin In West Bank Town Of Bethlehem.&nbsp;She Mouthed 'help Me' And McDonald's Workers Took Action.&nbsp;Suspect Arrested After Trying To Rob Bank.&nbsp;Ducks, Badgers Approach Pomp Of Rose Bowl In Different Ways.&nbsp;Man Who Made 27,000 Crosses For Shooting Victims Is Retiring.&nbsp;About A Dozen Hurt In Blast At Beechcraft Plant In Kansas.&nbsp;
